<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_login">DanceWithMe</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="parse_app_id">RieZAl3LrSYkzVupYOOrcNk1LDhkSTkrnmSl6ATe</string>
    <string name="parse_client_key">0zh28LprHU6lCIpTt3BAZm8LkJEBHkWEG2iYap1m</string>

    <string name="light_blue">0xff0000ee</string>

    <!-- Login Module -->
    <!-- Sign In Page String -->
    <string name="app_name">Welcome to the DanceWithMe App!</string>
    <string name="hello">Please login or sign up.</string>

    <string name="username">Email </string>
    <string name="password">Password </string>

    <string name="sign_in_button_text">Sign in</string>
    <string name="sign_up_button_text">Sign Up!</string>
    <string name="forgot_password_button_text">Forgot your password?</string>

    <!-- Invalid Sign In Page Strings -->
    <string name="invalid_login_msg">Invalid username or password. Please try again.</string>
    <string name="title_activity_invalid_login">InvalidLoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_an_account">Create an Account</string>

    <!--Profile Management -->
    <string name="edit_profile">Edit</string>
    <string name="add_styles">+</string>

    <!-- Create an Account Page Strings -->
    <string name="create_account_title">Creating an Account:</string>
    <string name="create_account_instructions">Please fill out the following fields.</string>
    <string name="email">Email </string>
    <string name="confirm_password">Confirm Password </string>
    <string name="first_name">First Name </string>
    <string name="last_name">Last Name </string>
    <string name="error_select_gender">Please select a gender</string>
    <string name="dance_style_preferences_title">Dance Style Preferences: </string>
    <string name="beginner_skill">Beginner</string>
    <string name="intermediate_skill">Intermediate</string>
    <string name="expert_skill">Expert</string>

    <string name="profile_picture">Upload a Profile Picture: </string>
    <string name="submit">Submit</string>
    <string name="title_activity_select_avenue">SelectAVenue</string>

    <!-- Select a Venue Page Strings -->
    <string name="prompt_select_a_venue">Please Select a Venue</string>
    <string name="title_activity_profile_management">Profile Management</string>

    <!-- Profile Management Page Strings -->
    <string name="profile_management_title">Profile Management</string>
    <string name="profile_question">By default, we use your profile setting for dance partner matching. Do you want to use temporary partner dance style preferences?</string>
    <string name="prior_to_dance_partner_searching_statement">Press Submit to search for your dance partner.</string>

    <!--Register-->
    <string name="action_register">New User? Register Here</string>
    <string name="gender_prompt">Select your Gender</string>
    <string name="action_existing_user">Already have an account? Sign in</string>
    <string name="error_password_no_match">Passwords do not match</string>

    <!-- Forgot Your Password Page Strings -->
    <string name="title_activity_forgot_your_password">Forgot Your Password</string>
    <string name="forgot_your_password_instruct">Please enter your email. Your password will be emailed to you.</string>
    <string name="title_activity_view_single_profile">ViewSingleProfile</string>

    <string name="login_activity_label">Sinch Messaging Tutorial</string>
    <string name="title_activity_list_users">ListUsersActivity</string>
    <string name="message_elipses">Message...</string>
    <string name="logout">Logout</string>
    <string name="changePassword">Change Password</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_activity_push">PushActivity</string>

    <!-- This is the PushTutorial Strings -->
    <string name="hello_message">Welcome! Tell us a bit more about yourself.</string>
    <string name="gender_text_view">Gender</string>
    <string name="age_text_view">Age</string>
    <string name="interests">Interests</string>
    <string name="gender_male_button">Male</string>
    <string name="gender_female_button">Female</string>
    <string name="save_button">Save</string>
    <string name="refresh_button">Refresh</string>
    <string name="ok_button">OK</string>
    <string name="alert_dialog_title">Profile</string>
    <string name="alert_dialog_success">Saved!</string>
    <string name="alert_dialog_failed">Failed with error.</string>
    <string name="my_skill">My Skill Level</string>
    <string name="dancestyle_prompt">Select your dance style</string>
    <string name="select_style">Dance Style</string>
    <string name="prompt_preferences">Partner Skill Level</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_dancestyle">DanceStyleActivity</string>
    <string name="facebook_app_id">443550519189137</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="title_activity_change_password">ChangePassword</string>

    <!-- Change Your Page Strings -->
    <string name="title_activity_change_your_password">Change your Password</string>
    <string name="change_your_password_instruct">Please fill out the following fields:</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_new_password">Confirm New Password:</string>
    <string name="action_forgot_password">Forgot Your Password?</string>
    <string name="lead_or_follow">Lead or Follow</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>

