<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/dwm_blue" >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="text"
                android:layout_weight="1"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="text"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="text"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender_array"
                    android:spinnerMode="dialog" />

                <!-- Fake TextView to use to set in an error state to allow an error to be shown for the TextView -->
                <TextView
                    android:id="@+id/tv_invisible_error"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignRight="@+id/spinner_gender"
                    android:layout_alignBottom="@+id/spinner_gender"
                    android:layout_marginTop="0dp"
                    android:paddingTop="0dp"
                    android:paddingRight="50dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </RelativeLayout>

            <Button android:id="@+id/button_existing_user"
                android:background="#00000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_existing_user"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/button_submit_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
