<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/dwm_blue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_style"
                android:textStyle="bold"
                android:textSize="16sp" />

            <!--Divider Line-->
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey_input_border"/>

            <Spinner
                android:id="@+id/spinner_dance_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:spinnerMode="dialog"
                android:prompt="@string/select_style"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_skill"
                android:textStyle="bold"
                android:textSize="16sp" />

            <!--Divider Line-->
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey_input_border"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radiogroup_skill_level"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="30dp">

                <RadioButton
                    android:id="@+id/radio_beginner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beginner_skill"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radio_intermediate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intermediate_skill"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radio_expert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expert_skill"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_preferences"
                android:textStyle="bold"
                android:textSize="16sp" />

            <!--Divider Line-->
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey_input_border"/>

            <CheckBox android:id="@+id/checkbox_beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginner_skill"
                android:onClick="onCheckboxClicked" />

            <CheckBox android:id="@+id/checkbox_intermediate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intermediate_skill"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/checkbox_expert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expert_skill"
                android:onClick="onCheckboxClicked"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:gravity="center" >

                <Button
                    android:id="@+id/button_cancel_dancestyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="32sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button_submit_dancestyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textSize="32sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>