<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/dwm_blue"
    tools:context="com.sinch.messagingtutorial.app.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:paddingTop="40dp">

            <ImageView
                android:id="@+id/dancewithme"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:maxWidth="5dp"
                android:maxHeight="5dp"
                android:layout_marginBottom="80dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/dancewithme" />

            <LinearLayout
                android:id="@+id/ll_login_email_address"
                style="@style/LoginTextLayout"
                android:layout_marginBottom="5dp">

                <ImageView
                    style="@style/LoginGlyph"
                    android:paddingBottom="10dp"
                    android:src="@drawable/glyph_email" />

                <!--Dummy input to attract focus-->
                <LinearLayout android:focusable="true"
                    android:focusableInTouchMode="true" android:layout_width="0px"
                    android:layout_height="0px" />

                <AutoCompleteTextView
                    android:id="@+id/loginUsername"
                    style="@style/LoginEditText"
                    android:hint="@string/prompt_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login_password"
                style="@style/LoginTextLayout">

                <ImageView
                    style="@style/LoginGlyph"
                    android:paddingBottom="13dp"
                    android:src="@drawable/glyph_password" />

                <EditText
                    android:id="@+id/loginPassword"
                    style="@style/LoginEditText"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"/>
            </LinearLayout>

            <Button android:id="@+id/signupButton"
                style="@style/ButtonTransparent"
                android:text="@string/action_register"
                android:textColor="@color/white"
                android:paddingTop="20dp"/>
            <Button android:id="@+id/forgotPasswordButton"
                style="@style/ButtonTransparent"
                android:text="@string/action_forgot_password"
                android:textColor="@color/bg_light_grey"
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                android:layout_margin="0dp"/>

            <Button android:id="@+id/loginButton"
                style="@style/button_confirm"
                android:text="@string/action_sign_in"
                android:textSize="20sp"
                android:layout_marginTop="0dp"
                />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

        </LinearLayout>
    </ScrollView>
 </RelativeLayout>